Password String Property does not work #41416

Closed
opened 2014-08-12 15:18:31 +02:00 by Jiri Hnidek · 9 comments
Member

Hi,
it is not possible to create hidden password text. I submit patch for this bug soon :-).

System Information
It influence all OS and graphical cards

Blender Version
This bug is caused by commit 0111f3505f

Short description of error
when you create string property with following Python code:

bpy.props.StringProperty(name="Password", subtype='PASSWORD')

then it is not possible to type/edit hiddent password text

Exact steps for others to reproduce the error
Open attached .blend file and type 'Run script'.

login_dialog.blend

Hi, it is not possible to create hidden password text. I submit patch for this bug soon :-). **System Information** It influence all OS and graphical cards **Blender Version** This bug is caused by commit 0111f3505f0263a35a4196535db26365651d30e7 **Short description of error** when you create string property with following Python code: bpy.props.StringProperty(name="Password", subtype='PASSWORD') then it is not possible to type/edit hiddent password text **Exact steps for others to reproduce the error** Open attached .blend file and type 'Run script'. [login_dialog.blend](https://archive.blender.org/developer/F102628/login_dialog.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Jiri Hnidek 2014-08-12 15:18:31 +02:00
Author
Member

Added subscriber: @jiri

Added subscriber: @jiri
Author
Member

I submitted patch for this bug: https://developer.blender.org/T41417

I submitted patch for this bug: https://developer.blender.org/T41417

Added subscriber: @mont29

Added subscriber: @mont29

Patch: 41416.patch

Please do not open two tasks for a single topic.

Patch: [41416.patch](https://archive.blender.org/developer/F102629/41416.patch) Please do not open two tasks for a single topic.
Author
Member

Sorry, it is my first bug report and patch submit in this system.

Sorry, it is my first bug report and patch submit in this system.

This issue was referenced by b70acd30c3

This issue was referenced by b70acd30c30834dc833a0390a6d754f70e03b9be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b70acd30c3.

Closed by commit b70acd30c3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41416
No description provided.