Correct own regression in password button editing

Fix T41416: by iri Hnidek